# Bili-Live-Tool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  windows-build.yml
api_client/: Cargo.toml
api_client/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
domain/: Cargo.toml
domain/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
