[workspace]
resolver = "2"
members = [
    "api_client",
    "domain",
    "gui",
    "cli",
]

[workspace.dependencies]
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
md5 = "0.7"
qrcode = "0.12"
directories = "5.0"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
percent-encoding = "2.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
chrono = "0.4"
rsa = { version = "0.9", features = ["pem"] }
