[package]
name = "api_client"
version = "0.1.2"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
domain = { path = "../domain" }
md5 = { workspace = true }
directories = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
percent-encoding = { workspace = true }
chrono = { version = "0.4", features = ["std"] } 