[package]
name = "gui"
version = "0.1.3"
edition = "2021"

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["wgpu"] }
anyhow = { workspace = true }
api_client = { path = "../api_client" }
domain = { path = "../domain" }
tokio = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true } 